Add custom template used in the previous assignment to better show parts 3 and 4 of the current assignment.

--- a/3_pintar.html
+++ b/3_pintar.html
@@ -4,12 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Desafio 3 - Punto 3</title>
+
+    <link rel="stylesheet" href="assets/css/normalize.css" />
+    <link rel="stylesheet" href="assets/css/base.css" />
+
+    <link rel="stylesheet" href="assets/css/components/navbar.css" />
+    <link rel="stylesheet" href="assets/css/components/footer.css" />
+
+    <link rel="stylesheet" href="assets/css/components/button.css" />
+
+    <link rel="stylesheet" href="assets/css/pages/part3.css" />
 
     <script src="assets/js/script.js" defer></script>
+
+    <title>FG: U3 Desafio 3</title>
   </head>
   <body>
-    <div id="ele1">hello 1</div>
-    <div id="ele2">hello 2</div>
+    <div class="content">
+      <nav class="flex-container navbar">
+        <h2>Unidad 3 - Desafío 3: Funciones</h2>
+        <div>
+          <ul class="flex-container">
+            <li><a href="index.html">Index</a></li>
+            <li><a href="3_pintar.html">Parte 3</a></li>
+            <li><a href="4_divs.html">Parte 4</a></li>
+          </ul>
+        </div>
+      </nav>
+      <main class="flex-container">
+        <div class="main-display flex-container">
+          <div id="ele1">hello 1</div>
+          <div id="ele2">hello 2</div>
+        </div>
+      </main>
+      <footer class="flex-container footer">
+        <div>
+          <h4>Felipe Guajardo. 2022</h4>
+        </div>
+        <div class="footer-desc">
+          <p>
+            Trabajo asignado por Academia Desafio Latam por el curso Full-Stack
+            Javascript
+          </p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
