Add emphasis to pressable keys in part 4

--- a/4_divs.html
+++ b/4_divs.html
@@ -34,8 +34,9 @@
       <main class="flex-container">
         <div class="main-display flex-container">
           <h4>
-            Presiona la tecla <b>a</b>, <b>s</b> o <b>d</b> para cambiar el
-            color y luego haz click en los cuadrados para pintarlos
+            Presiona la tecla <i class="color-key">a</i>,
+            <i class="color-key">s</i> o <i class="color-key">d</i> para cambiar
+            el color y luego haz click en los cuadrados para pintarlos
           </h4>
           <h5>Color seleccionado: <span id="color-display">Azul</span></h5>
           <div class="flex-container">
